--- a/style.css
+++ b/style.css
@@ -2,4 +2,28 @@
 
 body {
   font-family: "Roboto", sans-serif;
+  text-align: center;
+}
+
+h1 {
+  margin: 50px 0 50px 0;
+}
+
+.gameboard-container {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: repeat(3, auto);
+  justify-content: center;
+}
+
+.square {
+  background-color: beige;
+  border: 1px solid black;
+  width: 150px;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 40px;
 }
