--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
+:root {
+  --square-bg-color: rgba(216, 216, 216, 0.5);
+  --border-color: rgba(0, 63, 99, 1);
+}
+
 body {
   font-family: "Roboto", sans-serif;
   text-align: center;
@@ -10,6 +15,12 @@ h1 {
 }
 
 .gameboard-container {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: bisque;
+  width: 450px;
+  height: 450px;
   display: grid;
   grid-template-columns: repeat(3, auto);
   grid-template-rows: repeat(3, auto);
@@ -17,8 +28,8 @@ h1 {
 }
 
 .square {
-  background-color: beige;
-  border: 1px solid black;
+  background-color: var(--square-bg-color);
+  border: 1px solid var(--border-color);
   width: 150px;
   height: 150px;
   display: flex;
