--- a/style.css
+++ b/style.css
@@ -38,3 +38,20 @@ h1 {
   text-align: center;
   font-size: 40px;
 }
+
+.game-result-container {
+  background-color: rgba(243, 175, 127, 0.603);
+  position: fixed;
+  z-index: 1;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%);
+  padding: 50px 100px;
+  margin: 0;
+  display: none;
+  backdrop-filter: blur(2px);
+}
+
+.game-result {
+  margin: 0;
+}
