--- a/style.css
+++ b/style.css
@@ -40,18 +40,26 @@ h1 {
 }
 
 .game-result-container {
-  background-color: rgba(243, 175, 127, 0.603);
+  display: none;
   position: fixed;
   z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.game-result {
+  background-color: rgba(243, 175, 127, 0.603);
+  position: fixed;
   left: 50%;
   top: 50%;
   transform: translateX(-50%);
   padding: 50px 100px;
   margin: 0;
-  display: none;
   backdrop-filter: blur(2px);
 }
 
-.game-result {
+/* .game-result {
   margin: 0;
-}
+} */
