--- a/style.css
+++ b/style.css
@@ -2,25 +2,28 @@
 
 :root {
   --square-bg-color: rgba(216, 216, 216, 0.5);
+  --result-bg-color: rgba(216, 216, 216, 0.5);
   --border-color: rgba(0, 63, 99, 1);
+  --text-color: rgba(0, 63, 99, 1);
 }
 
 body {
   font-family: "Roboto", sans-serif;
   text-align: center;
+  color: var(--text-color);
 }
 
 h1 {
-  margin: 50px 0 50px 0;
+  margin: 80px 0 60px 0;
+  font-size: 50px;
 }
 
 .gameboard-container {
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: bisque;
-  width: 450px;
-  height: 450px;
+  /* position: relative; */
+  /* left: 50%;
+  transform: translateX(-50%); */
+  /* width: 450px;
+  height: 450px; */
   display: grid;
   grid-template-columns: repeat(3, auto);
   grid-template-rows: repeat(3, auto);
@@ -50,16 +53,12 @@ h1 {
 }
 
 .game-result {
-  background-color: rgba(243, 175, 127, 0.603);
+  background-color: var(--result-bg-color);
   position: fixed;
-  left: 50%;
-  top: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%) translateY(-50%);
   padding: 50px 100px;
+  width: 150px;
   margin: 0;
-  backdrop-filter: blur(2px);
+  backdrop-filter: blur(4px);
+  font-size: 25px;
 }
-
-/* .game-result {
-  margin: 0;
-} */
