--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
   --result-bg-color: rgba(216, 216, 216, 0.5);
   --border-color: rgba(0, 63, 99, 1);
   --text-color: rgba(0, 63, 99, 1);
+  --btn-color: rgba(0, 63, 99, 0.8);
+  --btn-hover-color: rgba(0, 63, 99, 0.9);
 }
 
 body {
@@ -18,12 +20,47 @@ h1 {
   font-size: 50px;
 }
 
+button {
+  background-color: var(--btn-color);
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-size: 15px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: var(--btn-hover-color);
+}
+
+button:active {
+  background-color: var(--btn-hover-color);
+  transform: scale(0.95);
+}
+
+.names {
+  display: none;
+  font-size: 25px;
+}
+
+.names .player1 {
+  justify-self: start;
+  margin: 0 0 50px 50px;
+}
+
+.names .player2 {
+  justify-self: end;
+  margin: 0 50px 50px 0;
+}
+
+#player1-name,
+#player2-name {
+  font-size: 35px;
+  font-weight: bold;
+}
+
 .gameboard-container {
-  /* position: relative; */
-  /* left: 50%;
-  transform: translateX(-50%); */
-  /* width: 450px;
-  height: 450px; */
   display: grid;
   grid-template-columns: repeat(3, auto);
   grid-template-rows: repeat(3, auto);
@@ -42,6 +79,13 @@ h1 {
   font-size: 40px;
 }
 
+.restart-btn {
+  font-size: 15px;
+  margin: 30px;
+  height: 40px;
+  width: 100px;
+}
+
 .game-result-container {
   display: none;
   position: fixed;
@@ -50,15 +94,83 @@ h1 {
   top: 0;
   width: 100%;
   height: 100%;
+  backdrop-filter: blur(6px);
 }
 
 .game-result {
-  background-color: var(--result-bg-color);
   position: fixed;
   transform: translateX(-50%) translateY(-50%);
   padding: 50px 100px;
-  width: 150px;
+  width: 200px;
   margin: 0;
-  backdrop-filter: blur(4px);
-  font-size: 25px;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.name-input-container {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(6px);
+}
+
+.name-input {
+  position: fixed;
+  border: 3px solid var(--border-color);
+  border-radius: 10px;
+  width: auto;
+  top: 30%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.name-input .form {
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: flex-start;
+}
+
+.name-input p {
+  font-size: 1.8rem;
+  font-weight: bold;
+  margin: 20px 15px 10px 15px;
+}
+
+.name-input input {
+  font-size: 15px;
+  margin: 0 15px 15px 15px;
+  width: 200px;
+  height: 30px;
+}
+
+.name-input button {
+  align-self: center;
+  font-size: 15px;
+  margin: 15px;
+  height: 40px;
+  width: 100px;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fade-out {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
 }
